# wlddc

./: .gitignore  CHANGELOG.md  README.md  config.example.yaml  pyproject.toml
wlddc/: __init__.py  __main__.py  agent.py  config.py
wlddc/backends/: __init__.py  brightness.py  display.py
wlddc/cli/: __init__.py  generate.py
